Fix: Featured image appears cropped

--- a/packages/editor/src/components/post-featured-image/style.scss
+++ b/packages/editor/src/components/post-featured-image/style.scss
@@ -38,6 +38,10 @@
 	box-shadow: 0 0 0 0 $blue-medium-500;
 }
 
+.editor-post-featured-image__preview {
+	height: auto;
+}
+
 .editor-post-featured-image__preview:not(:disabled):not([aria-disabled="true"]):focus {
 	box-shadow: 0 0 0 4px $blue-medium-500;
 }
